--- a/src/Components/AdsDetailspage/Adsdetails.css
+++ b/src/Components/AdsDetailspage/Adsdetails.css
@@ -217,6 +217,11 @@ color: #000;
 
 
 
+.h1{
+  color: #000;
+}
+
+
 
 
 .product-page {
@@ -328,12 +333,13 @@ color: #000;
 }
 
 .locate {
- margin-top: 20px;
+ margin-top: 30px;
   border: 2px solid #eee;
   padding: 10px;
   border-radius: 8px;
   height: 22%;
   color: #000;
+  margin-bottom: 10%;
 }
 .Add{
     display: flex;
@@ -442,7 +448,7 @@ color: #000;
 .section-title {
   margin: 30px 0 15px;
   font-size: 18px;
-  margin-left: 12%;
+  margin-left: 10%;
   color: #000;
 }
 
@@ -453,7 +459,7 @@ color: #000;
 display: flex;
   grid-template-columns: repeat(4, 1fr);
   gap: 15px;
-  margin-left: 12%;
+  margin-left: 37%;
 }
 
 .ad-card {
@@ -466,6 +472,7 @@ display: flex;
   width: 208px;
   height: 315px;
   color: #000;
+  height: 41vh;
 
 }
 
