--- a/src/Components/Chat/Chat.css
+++ b/src/Components/Chat/Chat.css
@@ -1,3 +1,9 @@
+.main-div {
+    margin-top: 2%;
+    height: 100%;
+    background-color: #ffffff; /* Full screen white background */
+    min-height: 100vh; /* Ensure full viewport height */
+}
 
 .header {
   display: flex;
@@ -6,7 +12,6 @@
   gap: 20px;
   padding: 12px 30px;
     flex-direction: row;
-
 
 }
 
@@ -94,7 +99,7 @@
 }
 
 .icon {
-  font-size: 20px;
+  font-size: 40px;
   color: #000;
   cursor: pointer;
 }
@@ -194,12 +199,14 @@ color: #000;
 }
 
 
-
-
-
-
-.category-btn:hover {
-  background-color: #add8e6; /* hover light blue */
-  color: #000;
-  border-color: #1e6bff;
+/* button view all and other 3  */
+.category-btn {
+  background-color: #f0f8ff; /* light hover color */
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  padding: 8px 12px;
+  font-size: 13px;
+  cursor: pointer;
+  transition: all 0.2s;
+color: #000;
 }
